android_library(
    name = "androidrendering",
    srcs = [
        "CanvasLegacy.java",
        "RenderOptions.java",
        "RenderOptionsBase.java",
        "SVG.java",
        "SVGAndroidRenderer.java",
        "SvgRenderingBase.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//androidsvg/src/main/java/com/caverock/androidsvg/loader:svg_external_file_resolver",
        "//androidsvg/src/main/java/com/caverock/androidsvg/model",
        "//androidsvg/src/main/java/com/caverock/androidsvg/parser",
        "//androidsvg/src/main/java/com/caverock/androidsvg/parser:exceptions",
        "//androidsvg/src/main/java/com/caverock/androidsvg/parser:parser_helper",
        "//androidsvg/src/main/java/com/caverock/androidsvg/util:android_logger",
        "//androidsvg/src/main/java/com/caverock/androidsvg/util:logger",
        "//androidsvg/src/main/java/com/caverock/androidsvg/xml:android_xml_parsers",
    ],
)
