load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "model",
    srcs = [
        "A.java",
        "Attrib.java",
        "AttribOp.java",
        "Box.java",
        "CSSClipRect.java",
        "CSSFontFeatureSettings.java",
        "CSSFontVariationSettings.java",
        "Circle.java",
        "ClipPath.java",
        "Colour.java",
        "Combinator.java",
        "CurrentColor.java",
        "Defs.java",
        "Ellipse.java",
        "GradientElement.java",
        "GradientSpread.java",
        "GraphicsElement.java",
        "Group.java",
        "HasTransform.java",
        "Image.java",
        "Length.java",
        "Line.java",
        "Marker.java",
        "Mask.java",
        "Matrix.java",
        "NotDirectlyRendered.java",
        "PaintReference.java",
        "Path.java",
        "PathDefinition.java",
        "PathInterface.java",
        "Pattern.java",
        "PolyLine.java",
        "Polygon.java",
        "PreserveAspectRatio.java",
        "PseudoClass.java",
        "PseudoClassIdents.java",
        "Rect.java",
        "Rule.java",
        "RuleMatchContext.java",
        "Ruleset.java",
        "Selector.java",
        "SimpleSelector.java",
        "SolidColor.java",
        "Source.java",
        "Stop.java",
        "Style.java",
        "Svg.java",
        "SvgConditional.java",
        "SvgConditionalContainer.java",
        "SvgConditionalElement.java",
        "SvgContainer.java",
        "SvgElement.java",
        "SvgElementBase.java",
        "SvgLinearGradient.java",
        "SvgObject.java",
        "SvgPaint.java",
        "SvgPreserveAspectRatioContainer.java",
        "SvgRadialGradient.java",
        "SvgStructure.java",
        "SvgViewBoxContainer.java",
        "Switch.java",
        "Symbol.java",
        "TRef.java",
        "TSpan.java",
        "Text.java",
        "TextChild.java",
        "TextContainer.java",
        "TextPath.java",
        "TextPositionedContainer.java",
        "TextRoot.java",
        "TextSequence.java",
        "Unit.java",
        "Use.java",
        "View.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//androidsvg/src/main/java/com/caverock/androidsvg/loader:css_resolver",
        "//androidsvg/src/main/java/com/caverock/androidsvg/parser:exceptions",
    ],
)
