load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "xml_parser",
    srcs = [
        "XmlDocumentHandler.java",
        "XmlParser.java",
    ],
    visibility = ["//visibility:public"],
    deps = ["//androidsvg/src/main/java/com/caverock/androidsvg/parser:exceptions"],
)

android_library(
    name = "android_xml_parsers",
    srcs = [
        "AutomaticAndroidXmlParser.java",
        "PullXmlParser.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":java_xml_parsers",
        ":xml_parser",
        "//androidsvg/src/main/java/com/caverock/androidsvg/parser:exceptions",
        "//androidsvg/src/main/java/com/caverock/androidsvg/parser:parser_helper",
        "//androidsvg/src/main/java/com/caverock/androidsvg/parser:text_scanner",
        "//androidsvg/src/main/java/com/caverock/androidsvg/util:logger",
    ],
)

java_library(
    name = "java_xml_parsers",
    srcs = ["SaxXmlParser.java"],
    visibility = ["//visibility:public"],
    deps = [
        ":xml_parser",
        "//androidsvg/src/main/java/com/caverock/androidsvg/parser:exceptions",
        "//androidsvg/src/main/java/com/caverock/androidsvg/parser:parser_helper",
        "//androidsvg/src/main/java/com/caverock/androidsvg/parser:text_scanner",
    ],
)
